chore: add notes about 'docker pull'

--- a/cheat_sheet_docker.tex
+++ b/cheat_sheet_docker.tex
@@ -285,6 +285,14 @@ numbers = none
 $ docker pull registry.hub.docker.com/leorfinkelberg/app_name:tag_name
 \end{lstlisting}
 
+Для ZyOpt
+\begin{lstlisting}[
+style = bash,
+numbers = none
+]
+$ docker pull docker.idp.yc.ziiot.ru/_ds_and_math_users/zyopt:dev
+\end{lstlisting}
+
 Пытаемся скачать manifest-файл
 \begin{lstlisting}[
 style = bash,
