chore: add notes about ENTRYPOINT

--- a/cheat_sheet_docker.tex
+++ b/cheat_sheet_docker.tex
@@ -113,6 +113,19 @@ numbers = none
 RUN apk update && apk upgrade && apk add bash
 \end{lstlisting}
 
+\subsubsection{Основные команды}
+
+\emph{Замечание}: Инструкция \verb*|ENTRYPOINT| позволяет задавать команду с агрументами, которая должна выполняться при запуске контейнера. Она похожа на команду \verb*|CMD|, но параметры, задаваемые в \verb*|ENTRYPOINT|, не перезаписываются в том случае, если контейнер запускают с параметрами командной строки. Вместо этого аргументы командной строки, передаваемые в конструкции вида \verb*|docker run image_name|, добавляются к аргументам, задаваемым инструкцией \verb*|ENTRYPOINT|. Например, после выполнения команды вида \verb*|docker run image_name bash| аргумент \verb*|bash| добавится в конец списка аргументов, заданных с помощью \verb*|ENTRYPOINT|.
+
+Рекомендации по использованию \verb*|CMD| и \verb*|ENTRYPOINT|:
+\begin{itemize}
+	\item Если при каждом запуске контейнера нужно выполнять одну и ту же команду -- используйте \verb*|ENTRYPOINT|.
+	
+	\item Если контейнер будет использоваться в роли приложения -- используйте \verb*|ENTRYPOINT|.
+	
+	\item Если вы знаете, что при запуске контейнера вам понадобится передавать ему аргументы, которые могут перезаписывать аргументы, указанные в Dockerfile, используйте \verb*|CMD|.
+\end{itemize}
+
 \texttt{COPY}: инструкция \verb|COPY . ./app| говорит Docker'у, что нужно скопировать файлы и папки из вашей локальной сборки в рабочую директорию образа. \texttt{COPY} создаст все нужные папки, если они осутствуют.
 
 \texttt{ADD}: делает то же самое, что и \texttt{COPY}, но с двумя отличиями. \texttt{ADD} может загружать файл по URL, а также извлекать локальные tar-файлы.
