chore: add notes about 'docker build'

--- a/cheat_sheet_docker.tex
+++ b/cheat_sheet_docker.tex
@@ -202,7 +202,7 @@ docker run my_image_name bash
 	\item При наличии дополнительных дефолтных аргументов, которые могут быть изменены через командную строку, лучше подойдет \texttt{CMD}.
 \end{itemize}
 
-\texttt{EXPOSE}: показывает какой порт пробрасывать из контейнера. Используйте команду \texttt{docker run} с флагом \verb|-p| для пробрасывания и сопоставления нескольких портов во время запуска. Флаг в верхнем регистре \verb|-P| будет пробрасывать все открытые порты.
+\texttt{EXPOSE}: показывает какой порт пробрасывать из контейнера. То есть \verb*|EXPOSE| указывает на то, какие порты планируется открыть для того, чтобы через них можно было бы связаться с работающим контейнером. Эта инструкция не открывает порты. Она, скорее, играет роль документации к образу, средством общения того, кто собирает образ, и того, кто запускает контейнер. Используйте команду \texttt{docker run} с флагом \verb|-p| для пробрасывания и сопоставления нескольких портов во время запуска. Флаг в верхнем регистре \verb|-P| будет пробрасывать все открытые порты.
 
 \texttt{VOLUME}: определяет, где контейнер будет хранить постоянные данные и получать к ним доступ.
 
@@ -923,6 +923,17 @@ RUN curl -SL "https://${MONGO_VERSION}.tgz" -o mongo.tgz \
     && gpg --verify mongo.tgz.sig && tar -xvf mongo.tgz -C /usr/local --strip-components=1 \
     && rm mongo.tgz*
 \end{lstlisting}
+
+\subsection{Советы по использованию кэша Docker}
+
+Чтобы использовать кэш Docker эффективно можно:
+\begin{itemize}
+	\item отключить кэширование \verb|docker build --no-cache=True|,
+	
+	\item переместить инструкции, вероятность изменения которых высока как можно ближе к концу Dockerfile,
+	
+	\item объединить команды \verb|RUN apt-get update| и \verb|apt-get install| в цепочки для того, чтобы исключить проблемы, связанные с неправильным использованием кэша.
+\end{itemize}
 
 
 \section{Базовые концепции, связанные с системой Docker}
